[package]
name = "loglook"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bson = { version = "2.8.1", features = ["chrono-0_4"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
config-file = "0.2.3"
console = "0.15.7"
ctrlc = { version = "3.4.2", features = ["termination"] }
dns-lookup = "2.0.4"
error-chain = "0.12.4"
futures = "0.3.30"
hickory-resolver = "0.24.0"
indicatif = "0.17.7"
mongodb = "2.8.0"
regex = "1.10.2"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shellexpand = "3.1.0"
tokio = { version = "1.35.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.3"
